src/objects/Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Knowledge Management template for a Guided delivery of information to a customer.</description>
    <fields>
        <fullName>Approval_Queue__c</fullName>
        <description>This field ties to Approval Queues.</description>
        <inlineHelpText>Select a Business Unit-specific approval queue for this article&apos;s approval workflow.</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Enforcement &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry &amp; Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopfakes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is for the body of your content. The content should not deviate from the overall theme as indicated in the title and/or summary. This content should stand on its own as a cohesive and complete source of information.</inlineHelpText>
        <label>Atom</label>
        <length>11100</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version is ready for approval</description>
        <inlineHelpText>Check this box if the article is ready to move into the approval workflow. An article cannot move out of Draft Stage without this box being checked. If you&apos;re completely satisfied with your draft, then click the &quot;Submit for Approval&quot; button.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <description>Sequence Levels 1 and 2.</description>
        <inlineHelpText>Select the Guide to sequence Levels 1 and 2.</inlineHelpText>
        <label>Guide</label>
        <picklist>
            <picklistValues>
                <fullName>How to Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Framework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOPfakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <description>Sets available Pick lists for Template</description>
        <inlineHelpText>Select a High Level Topic for your Guide.</inlineHelpText>
        <label>Level 0</label>
        <picklist>
            <controllingField>Guide__c</controllingField>
            <picklistValues>
                <fullName>Data Protection Authorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editors&apos; Picks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Businesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuals in Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Considerations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finding Foreign Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Considerations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Annex I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Principles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privacy Shield Supplemental Principles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Finance Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Businesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understanding IPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protecting Your IPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How to Report and Prevent IPR Infringement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Government Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPR Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Data Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPR Protection and Enforcement Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China IPR Webinar Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOPfakes News</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>Level 1 section for this sequence.</description>
        <inlineHelpText>Select a Level 1 section for this sequence.</inlineHelpText>
        <label>Level 1</label>
        <picklist>
            <controllingField>Level_0__c</controllingField>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Requests by Public Authorities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountability for Onward Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Export Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annex I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arbitration Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available Remedies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits of Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binding Nature of Decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash-in-Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificates of Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenges (Trade Problems)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice -- Timing of Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Briefs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity and Purpose Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispute Resolution and Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentary Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>Level 2 sections for this sequence.</description>
        <inlineHelpText>Select a Level 2 section for this sequence.</inlineHelpText>
        <label>Level 2</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Title__c</fullName>
        <description>Mobile title - Displays as the title in Mobile/Tablet View</description>
        <inlineHelpText>This field is required if the Title is longer than 37 characters. The shorter Mobile Title makes content more readable when viewing articles on devices such as cell phones or tablets and will only appear in mobile settings.</inlineHelpText>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>Full Public URL for Article</description>
        <formula>HYPERLINK($Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName, $Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName)</formula>
        <label>Public URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <defaultValue>&quot;Prepared by the International Trade Administration. With its network of 108 offices across the United States and in more than 75 countries, the International Trade Administration of the U.S. Department of Commerce utilizes its global presence and international marketing expertise to help U.S. companies sell their products and services worldwide. Locate the trade specialist in the U.S. nearest you by visiting http://export.gov/usoffices.&quot;</defaultValue>
        <description>Article references</description>
        <inlineHelpText>Highlight references you want the public to know were used during content creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Creates relationship to Series</description>
        <inlineHelpText>Type a keyword search available Article Series.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Article</value>
            </filterItems>
            <infoMessage>Type a keyword search available Article Series.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipName>Articles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Stage tracks the movement of an article through the approval process. An article may be in one of the following stages: Draft, Under Review, Submitted for Approval, Rejected, Published.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Guided</label>
    <pluralLabel>Guided</pluralLabel>
    <validationRules>
        <fullName>Required_Level_0</fullName>
        <active>true</active>
        <description>Level 0 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_0__c))</errorConditionFormula>
        <errorMessage>Please pick Level 0 (Mandatory field)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules>
</CustomObject>